<resources>
    <string name="app_name">CoroutineVideoCompressor</string>
    <string name="clear">Очистить</string>
    <string name="cut">Вырезать</string>
    <string name="copy">Скопировать</string>
    <string name="paste">Вставить</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="copied_message">Сообщение скопировано</string>
    <string name="login">Логин</string>
    <string name="email">Электронная почта</string>
    <string name="password">Пароль</string>
    <string name="invalid_email_password">Пожалуйста, укажите действительный адрес электронной почты и пароль.</string>
    <string name="app_google_play_store_link" translatable="false">"https://play.google.com/store/apps/details?id="</string>
    <string name="app_market_link" translatable="false">"market://details?id="</string>
    <string name="title">Kwork Messenger</string>
    <string name="hint_enter_a_message">Введите сообщение …</string>
    <string name="error_title">Ой</string>
    <string name="error_message">Не удалось загрузить элементы, попробуйте еще раз!</string>
    <string name="error_reload">Перезагрузить</string>
    <string name="error_code_social_need_email">В данных социальной сети не представлен email. Привяжите аккаунт на сайте.</string>
    <string name="file_access_error">Приложение не имеет доступа к выбранному файлу</string>
    <string name="vk_sdk_error_msg">Ошибка авторизации через Вконтакте</string>
    <string name="signin_error">Ошибка авторизации</string>
    <string name="signin_error_title">Не удается войти</string>
    <string name="signin_error_body">Неверный логин или пароль.\nЕсли вы забыли пароль, его можно восстановить</string>
    <string name="error_in_url">error=</string>
    <string name="error_happened_will_be_fixed_soon">Извините, в приложении обнаружена ошибка, мы исправим ошибку как можно скорее</string>
    <string name="response_error_400">Неверный запрос</string>
    <string name="response_error_401">Необходима авторизация</string>
    <string name="response_error_403">С вашего IP-адреса были обнаружены подозртельные обращения к сайту Kwork. В целях безопасности произошла блокировка IP.\nЕсли вы считаете, что это ошибка, то напишите в службу поддержки Kwork об этой ситуации на info@kwork.ru, указав в обращении свой IP-адрес %1$s. Мы постараемся решить проблему как можно скорее. </string>
    <string name="response_error_404">Метод API не найден</string>
    <string name="response_error_408">Истекло время ожидания</string>
    <string name="response_error_500">Внутренняя ошибка сервера</string>
    <string name="response_error_503">Сервис ндоступен</string>
    <string name="response_error_504">Шлюз не отвечает</string>
    <string name="response_error_unknown">Произошла ошибка</string>
    <string name="filter_count_orders_error">Не удалось получить количество заказов</string>
    <string name="attachment_retry">Попробовать снова</string>
    <string name="status">Статус</string>
    <string name="phone">Телефон</string>
    <string name="al_file" translatable="false">:file</string>
    <string name="al_gallery" translatable="false">:gallery</string>
    <string name="al_camera" translatable="false">:camera</string>
    <string name="contact_permission">"Для доступа к Контактам необходимо разрешение "</string>
    <string name="storage_permission">Для доступа к Хранилищу необходимо разрешение</string>
    <string name="read_sms_permission">Для доступа к чтению SMS необходимо разрешение</string>
    <string name="location_permission">Для доступа к Геолокации необходимо разрешение</string>
    <string name="phone_state_permisssion">Для доступа к Состоянию Телефона необходимо разрешение</string>
    <string name="phone_call_permission">Для доступа к Телефонным звонкам необходимо разрешение</string>
    <string name="phone_camera_permission">Для доступа к Камере необходимо разрешение</string>
    <string name="record_audio">Требуется разрешение на аудиозапись</string>
    <string name="camera_audio_permission">Для доступа к Камере и записи аудио необходимо разрешение</string>
    <string name="contact_permission_not_granted">Разрешение не было предоставлено для контактов</string>
    <string name="storage_permission_not_granted">Разрешение не было предоставлено для хранилища</string>
    <string name="read_sms_permission_not_granted">Разрешение не было предоставлено для чтения</string>
    <string name="location_permission_not_granted">Разрешение не было предоставлено для геолокации</string>
    <string name="phone_state_permission_not_granted">Разрешение не было предоставлено для состояние телефона</string>
    <string name="phone_call_permission_not_granted">Разрешение не было предоставлено для телефонных звонков</string>
    <string name="phone_camera_permission_not_granted">Разрешение не было предоставлено для камеры</string>
    <string name="record_audio_permission_not_granted">Разрешение не было предоставлено для аудио записи</string>
    <string name="audio_or_camera_permission_not_granted">Разрешение не было предоставлено для камеры и аудио записи</string>
    <string name="contact_permission_granted">Контакты Разрешение предоставлено</string>
    <string name="storage_permission_granted">Разрешения на хранение предоставлены</string>
    <string name="read_sms_permission_granted">Чтение SMS Разрешения предоставлены</string>
    <string name="location_permission_granted">Разрешения на местоположение были предоставлены</string>
    <string name="phone_state_permission_granted">Состояние телефона Разрешения предоставлены</string>
    <string name="phone_call_permission_granted">Разрешен телефонный звонок</string>
    <string name="phone_camera_permission_granted">Разрешение камеры было предоставлено</string>
    <string name="record_audio_permission_granted">Аудио запись разрешений была предоставлена</string>
    <string name="phone_camera_and_audio_permission_granted">Камера и аудио-разрешения были предоставлены</string>
    <string name="mobicom_max_attachment_warning">Достигнут максимальный лимит вложений</string>
    <string name="mobicom_select_attachment_text">Выберите хотя бы одно вложение</string>
    <string name="ok_alert">OK</string>
    <string name="undo">Отменить</string>
    <string name="dialog_archived">Диалог помещен в список удаленных</string>
    <string name="default_media_location_folder">Kwork</string>
    <string name="forgot_password_question">Забыли пароль?</string>
    <string name="email_or_login">Email или Логин</string>
    <string name="log_in">Авторизоваться</string>
    <string name="or">или</string>
    <string name="social_login">Войти через</string>
    <string name="restore_password">Восстановить пароль</string>
    <string name="enter_email_for_account">Введите адрес электронной почты, на который был зарегистрирован аккаунт</string>
    <string name="restore">Восстановить</string>
    <string name="online">онлайн</string>
    <string name="offline">оффлайн</string>
    <string name="password_success_text">Письмо с инструкциями по сбросу пароля отправлено</string>
    <string name="check_internet_connection">Проверьте интернет-соединение</string>
    <string name="enter_your_login_or_email">Введите адрес электронной почты или логин</string>
    <string name="enter_your_email">Введите адрес электронной почты</string>
    <string name="app_language">ЯЗЫК ПРИЛОЖЕНИЯ</string>
    <string name="russian" translatable="false">Русский</string>
    <string name="english" translatable="false">English</string>
    <string name="personal_data">ЛИЧНЫЕ ДАННЫЕ</string>
    <string name="edit_data">Сохранить данные</string>
    <string name="notifications_upper_case">УВЕДОМЛЕНИЯ</string>
    <string name="notify_about_messages">Уведомлять о сообщениях</string>
    <string name="notify_about_orders">Уведомлять о заказах</string>
    <string name="exit">Выход</string>
    <string name="support">Поддержка</string>
    <string name="notifications">Уведомления</string>
    <string name="settings">Настройки</string>
    <string name="settings_profile">Настройки профиля</string>
    <string name="navigation_drawer_open">Открыть меню</string>
    <string name="navigation_drawer_close">Закрыть меню</string>
    <string name="close">Закрыть</string>
    <string name="edit_profile_label">Вы можете добавить несколько строк о себе. Они будут видны всем, кто откроет ваш профиль.</string>
    <string name="name">Имя</string>
    <string name="name_en">Имя (на английском)</string>
    <string name="details">Информация о продавце</string>
    <string name="details_en">Информация о продавце (на английском)</string>
    <string name="captcha_response_cancelled">Ответ Capthca отменен</string>
    <string name="mute_user">Отключить уведомления от пользователя</string>
    <string name="unmute_user">Включить уведомления от пользователя</string>
    <string name="filesize_limit">Выбранный файл должен быть меньше 4 мб</string>
    <string name="mimetype_not_found">MimeType не найден</string>
    <string name="personal_data_en">ЛИЧНЫЕ ДАННЫЕ (НА АНГЛИЙСКОМ)</string>
    <string name="name_holder_ru">Имя: %1$s</string>
    <string name="name_holder_en">Имя (на английском): %1$s</string>
    <string name="details_holder">Информация о продавце: %1$s</string>
    <string name="details_holder_en">Информация о продавце (на английском): %1$s</string>
    <string name="edit_photo">Редактировать фото</string>
    <string name="fullname_hint">Ваше полное имя</string>
    <string name="fullname_hint_en">Ваше имя (на английском)</string>
    <string name="description_hint">Ваше описание продавца</string>
    <string name="description_hint_en">Ваше описание продавца (на английском)</string>
    <string name="mark_all_as_read">ОТМЕТИТЬ ВСЕ КАК ПРОЧИТАННОЕ</string>
    <string name="click_top_open">Кликните, чтобы открыть в браузере</string>
    <string name="no_new_notifications">Нет новых уведомлений</string>
    <string name="search">Поиск</string>
    <string name="message">Сообщение</string>
    <string name="edited">Изменено</string>
    <string name="edit_message">Редактировать сообщение</string>
    <string name="are_you_sure_to_delete_message">Вы уверены, что хотите удалить это сообщение?</string>
    <string name="searched_user_not_found">Указанный пользователь не найден!</string>
    <string name="file_can_not_be_attached_bcz_exceeds_limit">Файл %1$s не может быть прикреплен, так как его размер превышает %2$d Мб</string>
    <string name="empty_files_can_not_be_attached">Невозможно прикрепить пустые файлы</string>
    <string name="searched_word_not_found">Искомое слово не найдено</string>
    <string name="searched_navigation_item_of">%1$d из %2$d</string>
    <string name="kwork_informer_chanel_name">Канал уведомлений KWORK</string>
    <string name="kwork_informer_im_chanel">Канал собщений KWORK</string>
    <string name="im_chanel">Канал уведомлений для личных сообщений</string>
    <string name="user">Пользователь</string>
    <string name="sent_you_private_message">отправил вам личное сообщение.</string>
    <string name="you_have_new_notification">У вас есть 1 новое уведомление</string>
    <string name="you_have">У вас есть</string>
    <string name="new_notifications">новые уведомления</string>
    <string name="new_notifications_title">Новое уведомление:</string>
    <string name="new_notification_in_kwork">Новое уведомления в кворке</string>
    <string name="new_notification_from_user">Новое уведомления от пользователя</string>
    <string name="quality">Quality:</string>
    <string name="duration">Duration:</string>
    <string name="file_size">File size:</string>
    <string name="resolution">Resolution:</string>
    <string name="format">Format:</string>
    <string name="process">Process</string>
    <string name="file_name">File name:</string>
    <string name="compressed_file">Compressed File:</string>
</resources>